# oxideav-av1

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: fuzz.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode.rs  ffmpeg_oracle_decode.rs  obu.rs  panic_free_decode.rs  roundtrip.rs
fuzz/src/: lib.rs
src/: annexb.rs  bitreader.rs  cdef.rs  cdf.rs  decoder.rs  dpb.rs  film_grain.rs  film_grain_tables.rs  frame_header.rs  frame_header_tail.rs  inter_pred.rs  intra.rs  lib.rs  loop_filter.rs  loop_restoration.rs  obu.rs  qmatrix.rs  quant.rs  registry.rs  scan.rs  sequence_header.rs  superres.rs  symbol.rs  symbol_decoder.rs  tile_decode.rs  tile_group.rs  tile_info.rs  transform.rs  uncompressed_header_tail.rs
src/cdef/: direction.rs  filter.rs  frame.rs  mod.rs
src/cdfs/: coeff_q_ctx.rs  extra.rs  generated.rs  lr.rs  mod.rs
src/decode/: block.rs  coeff_ctx.rs  coeffs.rs  frame_state.rs  inter.rs  inter_block.rs  lr_unit.rs  mc.rs  mod.rs  modes.rs  mv.rs  palette.rs  partition.rs  reconstruct.rs  ref_scale.rs  superblock.rs  tile.rs  tx_type_map.rs
src/decoder/: frame_driver.rs  mod.rs  pixel_driver.rs  pixel_driver_dyn.rs
src/encoder/: bitwriter.rs  block_mode_info.rs  cdef_elect.rs  coefficients.rs  coeffs.rs  dv_hash.rs  forward_adst.rs  forward_identity.rs  forward_quantize.rs  forward_transform.rs  forward_transform_2d.rs  forward_wht.rs  frame_header.rs  frame_obu.rs  global_motion.rs  inter_frame.rs  inter_predict.rs  ivf.rs  key_frame.rs  loop_restoration_write.rs  mod.rs  obu.rs  partition.rs  partition_tree.rs  pixel_driver.rs  pixel_driver_dyn.rs  pyramid_gop.rs  quant.rs  rate_twin.rs  sequence_header.rs  sequence_obu.rs  symbol.rs  symbol_writer.rs  temporal_unit.rs  tile.rs  tile_group_obu.rs  transform.rs  transform_tree.rs  yuv_frame.rs
src/filmgrain/: apply.rs  ar.rs  mod.rs  patch.rs  rng.rs  scaling.rs
src/loopfilter/: edge.rs  frame.rs  mask.rs  mod.rs  narrow.rs  wide.rs
src/lr/: frame.rs  mod.rs  sgr.rs  wiener.rs
src/predict/: interp.rs  mod.rs
src/predict/intra/: cfl.rs  dc.rs  directional.rs  edge.rs  filter.rs  mod.rs  paeth.rs  smooth.rs  vh.rs
src/transform/: adst16.rs  adst4.rs  adst8.rs  cos_pi.rs  flipadst.rs  idct16.rs  idct32.rs  idct4.rs  idct64.rs  idct8.rs  idtx.rs  idtx_spec.rs  iwht4.rs  mod.rs  scan.rs  types.rs
tests/: annexb_conformance.rs  cdef_ab.rs  decode_block_syntax_walker.rs  delta_q_ab.rs  docs_corpus.rs  encode_decode_pixel_roundtrip.rs  encode_roundtrip.rs  encoder_end_to_end_ivf.rs  encoder_pixel_driver_y_only.rs  fixture_conformance.rs  format_matrix_conformance.rs  frame_header_fixtures.rs  fuzz_regressions.rs  global_motion_ab.rs  global_motion_conformance.rs  gop_inter_conformance.rs  hp_mv_ab.rs  inter_decode.rs  inter_psnr.rs  intra_smoke.rs  issue_765_4x4_identity_yuv444.rs  issue_786_lossless_wht_residual_scaling.rs  issue_791_partition_force_split_for_tiny_frames.rs  issue_796_dav1d_blackbox.rs  issue_796_sign_bits_match_dav1d.rs  key_frame_conformance.rs  loop_filter_fixture.rs  lr_grain_fixtures.rs  mixed_lossless.rs  modes_decode.rs  partition_walk.rs  pyramid_deep_ab.rs  pyramid_gop_conformance.rs  rate_twin_ab.rs  reference_clips.rs  registry_decoder.rs  screen_content_polish.rs  seg_features.rs  sequence_header_fixtures.rs  superres_oracle_corpus.rs  (+5 more)
tests/fixtures/: cdef_active.ivf  film_grain.ivf  issue_796_rc_trace.jsonl  lf_active.ivf  lr_active.ivf  palette_screen.ivf  reduced_still_128sb.obu  svt_av1_intra_64.ivf
tools/gen_cdfs/: go.mod  main.go
