[package]
name = "oxideav-av1"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-av1"
authors = ["Mark Karpeles"]
description = "Pure-Rust AV1 (AOMedia Video 1) parser for oxideav — OBU + sequence/frame header parse only"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-av1"
keywords = ["multimedia", "video", "av1", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"