[package]
name = "oxideav-av1"
version = "0.1.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-av1"
authors = ["Mark Karpeles"]
description = "Pure-Rust AV1 (AOMedia Video 1) parser for oxideav — OBU + sequence/frame header parse only"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-av1"
keywords = ["multimedia", "video", "av1", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"

[features]
default = []
# Emit one JSONL line per range-coder operation to the file path in
# `OXIDEAV_AV1_RC_TRACE` (or stderr if unset). Used to localise entropy
# divergences vs `dav1d`'s pixel-domain output — see workspace task #801
# / `tests/issue_796_*`. Zero cost when disabled (all hooks compile out).
rc-trace = []
